--- a/package.json
+++ b/package.json
@@ -3,18 +3,21 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.2.2"
+    "version": "3.3.0"
   },
   "dependencies": {
+    "ejs": "^2.5.6",
+    "formidable": "^1.1.1",
     "hexo": "latest",
+    "hexo-deployer-git": "latest",
     "hexo-generator-archive": "latest",
     "hexo-generator-category": "latest",
-    "hexo-deployer-git": "latest",
     "hexo-generator-index": "latest",
     "hexo-generator-tag": "latest",
     "hexo-renderer-ejs": "latest",
     "hexo-renderer-marked": "latest",
     "hexo-renderer-stylus": "latest",
-    "hexo-server": "latest"
+    "hexo-server": "latest",
+    "nedb": "^1.8.0"
   }
 }
